--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -9,7 +9,7 @@
   height: 0;
 
   transform: translateX(70%);
-  transition: all 0.4s ease-in-out;
+  transition: all 0.2s ease-in-out;
 
   &.hide {
     transform: translateX(100%);
